[package]
name = "finra-rs"
authors = ["Lukas Krejci <code@krejci.pw>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "Provides access to finra.org REST API in a somewhat intelligent manner."
homepage = "https://github.com/metlos/finra-rs"
repository = "https://github.com/metlos/finra-rs"
keywords = ["finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
thiserror = "1.0.61"
base64 = "0.22.1"
serde = { version = "1.0.202", features = ["derive"] }
csv = "1.3.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0", optional = true, features = ["tracing"] }
time = "0.3.36"
tracing = "0.1.40"
join-string = "0.3.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
time = { version = "0.3.36", features = ["macros"] }

[features]
default = []
tokio = ["dep:tokio"]
